--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ before_install:
     - wget http://ppa.launchpad.net/libreoffice/ppa/ubuntu/pool/main/d/doxygen/doxygen_1.8.7-2~precise1_amd64.deb -O doxygen.deb
     - sudo dpkg -i doxygen.deb
 install:
-    - sudo pip install -r requirements.txt
-    - sudo pip install flake8 flake8-import-order pep8-naming flake8-docstrings
-    - sudo python setup.py install
+    - pip install -r requirements.txt
+    - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
+    - python setup.py install
 before_script:
     - echo "BEFORE SCRIPT"
     - echo $MOE_CMAKE_OPTS
