--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,12 @@ before_install:
 install:
     - pip install -r requirements.txt
     - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
+    - cd moe
+    - mkdir -p build
+    - cmake -D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so ../optimal_learning/cpp
+    - cat CMakeCache.txt
+    - make GPP -j4
+    - cd ../..
     - python setup.py install
     - cat moe/build/CMakeCache.txt
 before_script:
