--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
     - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
     - cd moe
     - mkdir -p build
+    - cd build
     - cmake -D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so ../optimal_learning/cpp
     - cat CMakeCache.txt
     - make GPP -j4
