--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ python:
     - "2.7"
 cache:
     - apt
-env:
-    - MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
+#env:
+#    - MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
 before_install:
     - python --version
     - ls /usr/include/python2.7/
@@ -16,7 +16,7 @@ before_install:
     - ls /usr/local/lib/python2.7/dist-packages/
     - ls /usr/local/lib/python2.7/site-packages/
     - ls /usr/lib/python2.7/dist-packages
-    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
     - pip list
     - sudo apt-get update -qq
     - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev python-scipy
@@ -52,7 +52,7 @@ before_script:
     - ls /usr/local/lib/python2.7/dist-packages/
     - ls /usr/local/lib/python2.7/site-packages/
     - ls /usr/lib/python2.7/dist-packages
-    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
     - pip list
 #    - python -c "import pyramid; import pkg_resources; print pyramid.__file__; print pkg_resources.get_distribution('pyramid').version"
 #    - python -c "import zope.interface; print zope.interface.__file__"
@@ -69,7 +69,7 @@ script:
     - ls /usr/local/lib/python2.7/dist-packages/
     - ls /usr/local/lib/python2.7/site-packages/
     - ls /usr/lib/python2.7/dist-packages
-    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
+#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
     - pip list
 #    - python -c "import zope.interface; print zope.interface.__file__"
 after_script:
