--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
 #    - MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
 before_install:
     - python --version
+    - echo $TRAVIS_PYTHON_VERSION
     - ls /usr/include/python2.7/
     - ls /usr/lib/libpython*
     - which python && which python2.7
