--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,13 @@ python:
 cache:
     - apt
 env:
-    - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='3.2 2.7'"
-#    - MOE_CMAKE_OPTS='-D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so'
+    - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION`'"
 before_install:
     - python --version
     - echo $TRAVIS_PYTHON_VERSION
     - ls /usr/include/python2.7/
     - ls /usr/lib/libpython*
-    - which python && which python2.7
-    - python -c "import sys; print (sys.version)"
-    - python -c "import sys; print (sys.path)"
-    - python2.7 -c "import sys; print (sys.version)"
-    - python2.7 -c "import sys; print (sys.path)"
-    - ls /usr/local/lib/python2.7/dist-packages/
-    - ls /usr/local/lib/python2.7/site-packages/
-    - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
-    - pip list
     - sudo apt-get update -qq
-#    - sudo apt-get purge python3.2 python3.2-dev
     - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev python-scipy
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
     - sudo add-apt-repository -y ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install -y boost1.55
@@ -33,50 +21,8 @@ before_install:
 install:
     - pip install -r requirements.txt
     - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
-    - cmake --version
-#    - cd moe
-#    - mkdir -p build
-#    - cd build
-#    - cmake -D MOE_PYTHON_INCLUDE_DIR=/usr/include/python2.7/ -D MOE_PYTHON_LIBRARY=/usr/lib/libpython2.7.so ../optimal_learning/cpp
-#    - cmake ../optimal_learning/cpp
-#    - cmake -LAH || true
-#    - make GPP -j4
-#    - cd ../..
     - python setup.py install
-    - (cd moe/build; cmake -LAH || true)
-before_script:
-    - echo "BEFORE SCRIPT"
-    - echo $MOE_CMAKE_OPTS
-    - echo $MOE_OLD_OPTS
-    - echo $MOE_DERP_OPTS
-    - echo $MOE_FOO_OPTS
-    - which python && which python2.7
-    - python -c "import sys; print (sys.version)"
-    - python -c "import sys; print (sys.path)"
-    - python2.7 -c "import sys; print (sys.version)"
-    - python2.7 -c "import sys; print (sys.path)"
-    - ls /usr/local/lib/python2.7/dist-packages/
-    - ls /usr/local/lib/python2.7/site-packages/
-    - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
-    - pip list
-#    - python -c "import pyramid; import pkg_resources; print pyramid.__file__; print pkg_resources.get_distribution('pyramid').version"
-#    - python -c "import zope.interface; print zope.interface.__file__"
 script:
-    - make -B docs
     - make -B test
     - make -B style-test
-    - echo "AFTER make test"
-    - which python && which python2.7
-    - python -c "import sys; print (sys.version)"
-    - python -c "import sys; print (sys.path)"
-    - python2.7 -c "import sys; print (sys.version)"
-    - python2.7 -c "import sys; print (sys.path)"
-    - ls /usr/local/lib/python2.7/dist-packages/
-    - ls /usr/local/lib/python2.7/site-packages/
-    - ls /usr/lib/python2.7/dist-packages
-#    - ls /home/travis/virtualenv/python2.7.8/lib/python2.7/site-packages/
-    - pip list
-#    - python -c "import zope.interface; print zope.interface.__file__"
-after_script:
-    - echo "AFTER SCRIPT"
+    - make -B docs
