--- a/moe/optimal_learning/cpp/CMakeLists.txt
+++ b/moe/optimal_learning/cpp/CMakeLists.txt
@@ -55,14 +55,12 @@ endif()
 
 # User specifies priority Python versions to look for (in decreasing order of priority)
 # Default to 2.7 if user does not specify
-if (NOT EXISTS ${MOE_PYTHON_ADDITIONAL_VERSIONS})
-   set(MOE_PYTHON_ADDITIONAL_VERSIONS 2.7)
+if (EXISTS ${MOE_PYTHON_ADDITIONAL_VERSIONS})
+  set(Python_ADDITIONAL_VERSIONS
+    ${MOE_PYTHON_ADDITIONAL_VERSIONS}
+    CACHE STRING "List of Python version(s), ranked by priority; e.g., 2.7 2.6 3.2"
+    )
 endif()
-
-set(Python_ADDITIONAL_VERSIONS
-  ${MOE_PYTHON_ADDITIONAL_VERSIONS}
-  CACHE STRING "List of Python versions; e.g., 2.7 2.6 3.2"
-  )
 
 #### External dependencies
 find_package(PythonLibs REQUIRED)
