--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ python:
 cache:
     - apt
 env:
-    - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo ${TRAVIS_PYTHON_VERSION:0:3}`'"
+    - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
 before_install:
     - python --version
     - echo $TRAVIS_PYTHON_VERSION
+    - echo ${TRAVIS_PYTHON_VERSION:0:3}
+    - echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1
     - ls /usr/include/python2.7/
     - ls /usr/lib/libpython*
     - sudo apt-get update -qq
