--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ python:
 cache:
     - apt
 env:
-    - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
+    global:
+        - PYTHON_VERISON_MAJOR_MINOR=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`
+        - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $PYTHON_VERSION_MAJOR_MINOR`'"
 before_install:
     - python --version
     - echo $TRAVIS_PYTHON_VERSION
