--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - apt
 env:
     global:
-        - PYTHON_VERISON_MAJOR_MINOR=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`
+        - "PYTHON_VERISON_MAJOR_MINOR=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`"
         - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $PYTHON_VERSION_MAJOR_MINOR`'"
 before_install:
     - python --version
