--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,15 @@ cache:
     - apt
 env:
     global:
+        - FOO=2
         - "PYTHON_VERISON_MAJOR_MINOR=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`"
         - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $PYTHON_VERSION_MAJOR_MINOR`'"
 before_install:
     - python --version
+    - echo $PYTHON_VERISON_MAJOR_MINOR
+    - echo $MOE_CMAKE_OPTS
+    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
+    - echo $MOE_CMAKE_OPTS
     - echo $TRAVIS_PYTHON_VERSION
     - echo ${TRAVIS_PYTHON_VERSION:0:3}
     - echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1
