--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
     global:
         - FOO=2
         - PYTHON_VERISON_MAJOR_MINOR=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`
-        - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='2.7'"
+        - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS=2.7"
 before_install:
     - which python; which python2.7
     - python --version
