--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,18 @@
 language: python
 python:
-    - "2.7"
+    - "2.7_with_system_site_packages"
 cache:
     - apt
 env:
     global:
-        - FOO=2
-        - PYTHON_VERISON_MAJOR_MINOR=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`
-        - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS=2.7"
+        - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`"
 before_install:
     - which python; which python2.7
     - python --version
-    - echo $PYTHON_VERISON_MAJOR_MINOR
     - echo $MOE_CMAKE_OPTS
     - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
     - echo $MOE_CMAKE_OPTS
     - echo $TRAVIS_PYTHON_VERSION
-    - echo ${TRAVIS_PYTHON_VERSION:0:3}
-    - echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1
     - ls /usr/include/python2.7/
     - ls /usr/lib/libpython*
     - sudo apt-get update -qq
