--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,7 @@ python:
     - "2.7"
 cache:
     - apt
-env:
-    global:
-        - MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS=`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`"
 before_install:
-    - which python; which python2.7
-    - python --version
-    - echo $MOE_CMAKE_OPTS
-    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
-    - echo $MOE_CMAKE_OPTS
-    - echo $TRAVIS_PYTHON_VERSION
-    - ls /usr/include/python2.7/
-    - ls /usr/lib/libpython*
     - sudo apt-get update -qq
     - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev python-scipy
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
@@ -26,8 +15,10 @@ before_install:
 install:
     - pip install -r requirements.txt
     - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
+    # Tell MOE to install the Python specified in Travis (b/c many are installed)
+    # The env-var may be "x.x_with_system_site_packages" so we need to extract just the front of the string
+    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
     - python setup.py install
-    - (cd moe/build; cmake -LAH || true)
 script:
     - make -B test
     - make -B style-test
