--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-    - "2.7_with_system_site_packages"
+    - "2.7"
 cache:
     - apt
 before_install:
@@ -17,8 +17,7 @@ install:
     - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
     # Tell MOE to install the Python specified in Travis (b/c many are installed)
     # The env-var may be "x.x_with_system_site_packages" so we need to extract just the front of the string
-#    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
-    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='2.6; 2.7'"
+    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
     - python setup.py install
 script:
     - make -B test
