--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,24 @@
+language: python
+python:
+    - "2.7"
 cache:
     - apt
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y build-essential python python-dev python2.7 python2.7-dev doxygen libblas-dev liblapack-dev gfortran git make flex bison libssl-dev libedit-dev python-scipy
+    - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
     - sudo add-apt-repository -y ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install -y boost1.55
     - sudo add-apt-repository -y ppa:kalakris/cmake && sudo apt-get update -q && sudo apt-get install -y cmake
     - sudo add-apt-repository -y ppa:chris-lea/python-numpy && sudo apt-get update -q && sudo apt-get install -y python-numpy
-    - sudo pip install -r requirements.txt
-    - sudo pip install flake8 flake8-import-order pep8-naming flake8-docstrings
+    - wget http://ppa.launchpad.net/libreoffice/ppa/ubuntu/pool/main/d/doxygen/doxygen_1.8.7-2~precise1_amd64.deb -O doxygen.deb
+    - sudo dpkg -i doxygen.deb
 install:
-    - sudo python setup.py install
+    - pip install -r requirements.txt
+    - pip install flake8 flake8-import-order pep8-naming flake8-docstrings
+    # Tell MOE to install the Python specified in Travis (b/c many are installed)
+    # The env-var may be "x.x_with_system_site_packages" so we need to extract just the front of the string
+    - export MOE_CMAKE_OPTS="-D MOE_PYTHON_ADDITIONAL_VERSIONS='`echo $TRAVIS_PYTHON_VERSION | cut -d '_' -f 1`'"
+    - python setup.py install
 script:
     - make -B test
     - make -B style-test
