--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# If you add/remove requirements here, update ``requires`` in ``setup.py`` (root directory)
 pyramid==1.5.1
 pyramid_mako==1.0.2
 WebError==0.10.3
