--- a/moe/optimal_learning/cpp/gpu/CMakeLists.txt
+++ b/moe/optimal_learning/cpp/gpu/CMakeLists.txt
@@ -1,9 +1,16 @@
 cmake_minimum_required(VERSION 2.8.9)
 find_package(CUDA 5.0 REQUIRED)
-CUDA_INCLUDE_DIRECTORIES(
-    ${CUDA_INCLUDE_DIRS}
-    ${MOE_CUDA_SDK_INCLUDE_DIRS}
-    )
+
+if (DEFINED MOE_CUDA_SDK_INCLUDE_DIRS)
+    if (IS_DIRECTORY ${MOE_CUDA_SDK_INCLUDE_DIRS})
+        CUDA_INCLUDE_DIRECTORIES(
+            ${CUDA_INCLUDE_DIRS}
+            ${MOE_CUDA_SDK_INCLUDE_DIRS}
+            )
+    else()
+        message(FATAL_ERROR "MOE_CUDA_SDK_INCLUDE_DIRS is not a valid directory: " ${MOE_CUDA_SDK_INCLUDE_DIRS})
+    endif()
+endif()
 
 # Provide a list of actual .cu files
 set(CUDA_SRCS
