--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 pyramid==1.5.1
 pyramid_mako==1.0.2
 WebError==0.10.3
-testify==0.5.3
+pytest==2.6.3
 webtest==2.0.15
 simplejson==3.5.3
 numpy==1.8.1
