Replace WebError and Paste deps with pyramid_debugtoolbar and waitress
Update pyramid configurations in order to make MOE more Python3 compatible. WebError is unmaintained, pyramid_debugtoolbar is preferred instead.
waitress is the default server.

--- a/development.ini
+++ b/development.ini
@@ -1,27 +1,39 @@
-[app:MOE]
+###
+# app configuration
+# http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.html
+###
+
+[app:main]
 use = egg:MOE
-reload_templates = true
-debug_authorization = false
-debug_notfound = false
-debug_routematch = false
-debug_templates = true
-default_locale_name = en
+pyramid.reload_templates = true
+pyramid.debug_authorization = false
+pyramid.debug_notfound = false
+pyramid.debug_routematch = false
+pyramid.default_locale_name = en
+pyramid.includes = 
+    pyramid_debugtoolbar
+
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
 use_mongo = false
 mongodb.url = mongodb://localhost
-mongodb.port = 27017
 mongodb.db_name = mydb
 
-[pipeline:main]
-pipeline =
-    egg:WebError#evalerror
-    MOE
+###
+# wsgi server configuration
+###
 
 [server:main]
-use = egg:Paste#http
+use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 
-# Begin logging configuration
+###
+# logging configuration
+# http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
+###
+
 
 [loggers]
 keys = root, moe
@@ -38,7 +50,6 @@ args = ('%(here)s/moe.log','a')
 level = DEBUG
 formatter = generic
 
-# used by all applications in the Pyramid process that ask for a logger
 [logger_root]
 level = INFO
 handlers = console, filelog
