--- a/production.ini
+++ b/production.ini
@@ -1,39 +1,34 @@
-[app:MOE]
+###
+# app configuration
+# http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/environment.html
+###
+
+[app:main]
 use = egg:MOE
-reload_templates = false
-debug_authorization = false
-debug_notfound = false
-debug_routematch = false
-debug_templates = false
-default_locale_name = en
+pyramid.reload_templates = false
+pyramid.debug_authorization = false
+pyramid.debug_notfound = false
+pyramid.debug_routematch = false
+pyramid.default_locale_name = en
+
+use_mongo = false
 mongodb.url = mongodb://localhost
 mongodb.db_name = mydb
 
-[filter:weberror]
-use = egg:WebError#error_catcher
-debug = false
-;error_log = 
-;show_exceptions_in_wsgi_errors = true
-;smtp_server = localhost
-;error_email = janitor@example.com
-;smtp_username = janitor
-;smtp_password = "janitor's password"
-;from_address = paste@localhost
-;error_subject_prefix = "Pyramid Error"
-;smtp_use_tls =
-;error_message =
-
-[pipeline:main]
-pipeline =
-    weberror
-    MOE
+###
+# wsgi server configuration
+###
 
 [server:main]
-use = egg:Paste#http
+use = egg:waitress#main
 host = 0.0.0.0
 port = 6543
 
-# Begin logging configuration
+###
+# logging configuration
+# http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
+###
+
 
 [loggers]
 keys = root, moe
@@ -50,7 +45,6 @@ args = ('%(here)s/moe.log','a')
 level = DEBUG
 formatter = generic
 
-# used by all applications in the Pyramid process that ask for a logger
 [logger_root]
 level = WARN
 handlers = console, filelog
