--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # If you add/remove requirements here, update ``requires`` in ``setup.py`` (root directory)
 future
 pyramid==1.5.1
+pyramid_debugtoolbar
 pyramid_mako==1.0.2
-WebError==0.10.3
+waitress
 pytest==2.6.3
 webtest==2.0.15
 simplejson==3.5.3
