Update installation document and conda moe recipe about Python 3 support.

--- a/conda-recipe/moe/meta.yaml
+++ b/conda-recipe/moe/meta.yaml
@@ -29,10 +29,11 @@ requirements:
     - scipy
     - pyramid
     - pyramid_mako
+    - pyramid_debugtoolbar
+    - waitress
     - colander
     - libstdcplusplus
     - simplejson
-    - webtest
     - pytest
 
 test:
