--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     - sudo apt-get install -y build-essential libblas-dev liblapack-dev gfortran make libedit-dev
     - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update -q && sudo apt-get install -y gcc-4.7 g++-4.7 && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 20 && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 20 && sudo update-alternatives --config gcc && sudo update-alternatives --config g++
     - sudo add-apt-repository -y ppa:boost-latest/ppa && sudo apt-get update -q && sudo apt-get install -y boost1.55
-    - sudo add-apt-repository -y ppa:george-edison55/precise-backports && sudo apt-get update -q && sudo apt-get install -y cmake
+    - sudo add-apt-repository -y ppa:roblib/ppa && sudo apt-get update -q && sudo apt-get install -y cmake cmake-data
     - sudo add-apt-repository -y ppa:chris-lea/python-numpy && sudo apt-get update -q && sudo apt-get install -y python-numpy
     - wget http://ppa.launchpad.net/libreoffice/ppa/ubuntu/pool/main/d/doxygen/doxygen_1.8.7-2~precise1_amd64.deb -O doxygen.deb
     - sudo dpkg -i doxygen.deb
