CMakeLists.txt: Try out other libboost_python versions.

--- a/moe/optimal_learning/cpp/CMakeLists.txt
+++ b/moe/optimal_learning/cpp/CMakeLists.txt
@@ -81,11 +81,17 @@ if (${PYTHON_MAJOR} MATCHES "3")
     #check e.g. libboost_python-py35.so first
     find_package(Boost 1.51 COMPONENTS python-py${PYTHON_MAJOR}${PYTHON_MINOR})
     if (NOT Boost_FOUND)
+        #check libboost_python3.so
+        find_package(Boost 1.51 COMPONENTS python3)
+    endif()
+    if (NOT Boost_FOUND)
         find_package(Boost 1.51 COMPONENTS python-py34)
     endif()
     if (NOT Boost_FOUND)
-        #check libboost_python3.so
-        find_package(Boost 1.51 COMPONENTS python3 REQUIRED)
+        find_package(Boost 1.51 COMPONENTS python-py33)
+    endif()
+    if (NOT Boost_FOUND)
+        find_package(Boost 1.51 COMPONENTS python-py32 REQUIRED)
     endif()
 else()
     message(STATUS "Searching for Boost Python 2 component")
